--- a/Source.RichCC/Source.RichCC/css/richcc.css
+++ b/Source.RichCC/Source.RichCC/css/richcc.css
@@ -212,7 +212,6 @@
     -webkit-transform: scale(1);
     transform: scale(1); } }
   .richcc-datepicker .richcc-icon-container {
-    outline: none;
     border: 0;
     display: block;
     min-width: 0;
@@ -631,6 +630,8 @@
         height: 36px;
         padding: 0 0 0 5px;
         width: 300px; }
+        .richcc-datepicker .richcc-daypicker thead tr.header-action-holder .header-actions .richcc-icon-container:not([disabled]):focus, .richcc-datepicker .richcc-daypicker thead tr.header-action-holder .header-actions .richcc-icon-container:not(.disabled):focus {
+          outline: 1px dotted #000; }
         .richcc-datepicker .richcc-daypicker thead tr.header-action-holder .header-actions.calNavHidden .labelHolder {
           width: 100%; }
         .richcc-datepicker .richcc-daypicker thead tr.header-action-holder .header-actions .richcc-icon {
