--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -329,7 +329,6 @@
     }
 
     .richcc-icon-container {
-        outline: none;
         border: 0;
         display: block;
         min-width: 0;
@@ -1048,6 +1047,12 @@
                         height: 36px;
                         padding: 0 0 0 5px;
                         width: 300px;
+
+                        .richcc-icon-container {
+                            &:not([disabled]):focus, &:not(.disabled):focus {
+                                outline: 1px dotted #000;
+                            }
+                        }
 
                         &.calNavHidden {
                             .labelHolder {
