--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -1156,6 +1156,7 @@
                             .markHolder {
                                 position: relative;
                                 height: calc(100% - 27px);
+                                pointer-events:none;
 
                                 .mark {
                                     position: absolute;
@@ -1492,6 +1493,7 @@
                                 position: relative;
                                 width: 100%;
                                 box-sizing: border-box;
+                                pointer-events:none;
 
                                 .mark {
                                     position: relative;
