--- a/Source.RichCC/Source.RichCC/css/richcc.css
+++ b/Source.RichCC/Source.RichCC/css/richcc.css
@@ -7,6 +7,14 @@
   border-radius: 0;
   background: #fff;
   margin-top: 0; }
+  .richcc-popup-container .offscreen {
+    position: absolute;
+    clip: rect(1px, 1px, 1px, 1px);
+    padding: 0;
+    border: 0;
+    height: 1px;
+    width: 1px;
+    overflow: hidden; }
   .richcc-popup-container.hasHoliday {
     height: 82px; }
     .richcc-popup-container.hasHoliday .event-details-container {
@@ -48,6 +56,8 @@
     width: 100%;
     height: 100%;
     border-radius: 0; }
+    .richcc-popup-container .richcc-day-popup:focus {
+      outline: 1px dotted #000; }
     .richcc-popup-container .richcc-day-popup .event-container {
       height: calc(100% - 48px);
       width: 100%; }
@@ -154,6 +164,14 @@
   margin: 0;
   border: none;
   position: relative; }
+  .richcc-datepicker .offscreen {
+    position: absolute;
+    clip: rect(1px, 1px, 1px, 1px);
+    padding: 0;
+    border: 0;
+    height: 1px;
+    width: 1px;
+    overflow: hidden; }
   .richcc-datepicker.collapsed-mode {
     height: 100%; }
   .richcc-datepicker.fixedWidth {
@@ -692,7 +710,9 @@
       height: 16.67%;
       text-align: left; }
       .richcc-datepicker .richcc-daypicker tbody tr.collapsed-mode td.richcc-td.cc-focus {
-        outline: 1px dotted #000; }
+        outline: 2px solid #0073c6; }
+      .richcc-datepicker .richcc-daypicker tbody tr.collapsed-mode td.richcc-td:focus {
+        outline: none; }
       .richcc-datepicker .richcc-daypicker tbody tr.collapsed-mode td.richcc-td.notrans {
         animation: none;
         transition: none; }
