--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -8,6 +8,16 @@
     background: #fff;
     margin-top: 0;
 
+    .offscreen {
+        position: absolute;
+        clip: rect(1px, 1px, 1px, 1px);
+        padding: 0;
+        border: 0;
+        height: 1px;
+        width: 1px;
+        overflow: hidden;
+    }
+
     &.hasHoliday {
         height: 82px;
 
@@ -92,6 +102,10 @@
         width: 100%;
         height: 100%;
         border-radius: 0;
+
+        &:focus {
+            outline: 1px dotted #000;
+        }
 
         .event-container {
             height: calc(100% - 48px);
@@ -242,6 +256,18 @@
     margin: 0;
     border: none;
     position: relative;
+
+
+    .offscreen {
+        position: absolute;
+        clip: rect(1px, 1px, 1px, 1px);
+        padding: 0;
+        border: 0;
+        height: 1px;
+        width: 1px;
+        overflow: hidden;
+    }
+
 
     &.collapsed-mode {
         height: 100%;
@@ -1155,9 +1181,12 @@
                             text-align: left;
 
                             &.cc-focus {
-                                outline: 1px dotted #000;
+                                outline: 2px solid #0073c6;
                             }
 
+                            &:focus {
+                                outline: none;
+                            }
 
 
                             &.notrans {
