--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -864,6 +864,11 @@
                                     .richcc-month-eventbox {
 
                                         .markHolder {
+
+                                            &.cc-focus {
+                                                outline: 2px solid #0073c6;
+                                            }
+
                                             .mark {
                                                 .mark-stripe {
                                                     &.light {
@@ -922,6 +927,11 @@
                                         box-sizing: content-box;
 
                                         .markHolder {
+
+                                            &.cc-focus {
+                                                outline: 2px solid #0073c6;
+                                            }
+
                                             .mark {
 
                                                 &.top {
@@ -944,6 +954,10 @@
                                         .markHolder {
                                             width: 100%;
                                             height: 100%;
+
+                                            &.cc-focus {
+                                                outline: 2px solid #0073c6;
+                                            }
 
                                             .mark {
                                                 background: none;
@@ -1197,6 +1211,10 @@
                             .markHolder {
                                 position: relative;
                                 height: calc(100% - 27px);
+
+                                &.cc-focus {
+                                    outline: 2px solid #0073c6;
+                                }
 
                                 &.pointerNone {
                                     pointer-events: none;
@@ -1542,6 +1560,10 @@
                                 width: 100%;
                                 box-sizing: border-box;
 
+                                &.cc-focus {
+                                    outline: 2px solid #0073c6;
+                                }
+
                                 &.pointerNone {
                                     pointer-events: none;
                                 }
@@ -1837,6 +1859,10 @@
                         }*/
                         .markHolder {
                             height: 100%;
+
+                            &.cc-focus {
+                                outline: 2px solid #0073c6;
+                            }
 
                             &.pointerNone {
                                 pointer-events: none;
