--- a/Source.RichCC/Source.RichCC/css/richcc.css
+++ b/Source.RichCC/Source.RichCC/css/richcc.css
@@ -692,6 +692,16 @@
           text-align: center;
           line-height: 36px;
           margin: 0; }
+      .richcc-datepicker .richcc-daypicker thead tr th .labelHolder p {
+        width: 100%; }
+        .richcc-datepicker .richcc-daypicker thead tr th .labelHolder p.title {
+          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+          font-weight: 700;
+          text-transform: uppercase;
+          padding: 0 15px;
+          text-align: center;
+          line-height: 36px;
+          margin: 0; }
     .richcc-datepicker .richcc-daypicker thead tr th.dayTitle {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       font-weight: 600;
