--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -1155,6 +1155,20 @@
                                 margin: 0;
                             }
                         }
+
+                         p {
+                            width: 100%;
+
+                            &.title {
+                                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                                font-weight: 700;
+                                text-transform: uppercase;
+                                padding: 0 15px;
+                                text-align: center;
+                                line-height: 36px;
+                                margin: 0;
+                            }
+                        }
                     }
 
                     &.dayTitle {
