--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -1103,7 +1103,7 @@
                         margin: 0 auto;
                         height: 36px;
                         padding: 0 0 0 5px;
-                        width: 300px;
+                        width: 100%;
 
                         .richcc-icon-container {
                             &:not([disabled]):focus, &:not(.disabled):focus {
