--- a/Source.RichCC/Source.RichCC/css/richcc.css
+++ b/Source.RichCC/Source.RichCC/css/richcc.css
@@ -665,7 +665,8 @@
         margin: 0 auto;
         height: 36px;
         padding: 0 0 0 5px;
-        width: 100%; }
+        width: 100%;
+        max-width: 300px; }
         .richcc-datepicker .richcc-daypicker thead tr.header-action-holder .header-actions .richcc-icon-container:not([disabled]):focus, .richcc-datepicker .richcc-daypicker thead tr.header-action-holder .header-actions .richcc-icon-container:not(.disabled):focus {
           outline: 1px dotted #000; }
         .richcc-datepicker .richcc-daypicker thead tr.header-action-holder .header-actions.calNavHidden .labelHolder {
