--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -1104,7 +1104,7 @@
                         height: 36px;
                         padding: 0 0 0 5px;
                         width: 100%;
-                        max-width:300px;
+                        max-width: 300px;
 
                         .richcc-icon-container {
                             &:not([disabled]):focus, &:not(.disabled):focus {
@@ -1157,7 +1157,7 @@
                             }
                         }
 
-                         p {
+                        p {
                             width: 100%;
 
                             &.title {
@@ -1309,13 +1309,17 @@
                                         -o-animation-fill-mode: forwards;
                                         -webkit-animation-fill-mode: forwards;
                                         animation-fill-mode: forwards;
-                                        border: 2px dashed transparent;
+                                        border: none;
                                         -moz-box-sizing: content-box;
                                         -webkit-box-sizing: content-box;
                                         box-sizing: content-box;
+                                        top: 2px;
 
                                         &.highlightBorder {
                                             border-color: #909090;
+                                            border-style: dashed;
+                                            border-width: 2px;
+                                            top: 0px;
 
                                             .mark-stripe-color {
                                                 width: calc(100% - 4px);
@@ -1644,17 +1648,23 @@
                                         -o-animation-fill-mode: forwards;
                                         -webkit-animation-fill-mode: forwards;
                                         animation-fill-mode: forwards;
-                                        border: 2px dashed transparent;
+                                        border: none;
                                         -moz-box-sizing: border-box;
                                         -webkit-box-sizing: border-box;
                                         box-sizing: border-box;
+                                        top: 2px;
 
                                         &.highlightBorder {
                                             border-color: #909090;
+                                            border-width: 2px;
+                                            border-style: dashed;
+                                            top: 0px;
                                         }
 
                                         .mark-stripe-color {
                                             height: calc(100% - 4px);
+                                            box-sizing: border-box;
+                                            border: 1px solid transparent;
                                         }
                                     }
 
