--- a/Source.RichCC/Source.RichCC/scss/richcc.scss
+++ b/Source.RichCC/Source.RichCC/scss/richcc.scss
@@ -96,6 +96,9 @@
         height: 100%;
         border-radius: 0;
         border-top: 3px solid #0073c6;
+        border-bottom: 3px solid transparent;
+        border-left: 3px solid transparent;
+        border-right: 3px solid transparent;
     }
 
     .richcc-day-popup {
@@ -256,7 +259,7 @@
     margin: 0;
     border: none;
     position: relative;
-
+    border: 1px solid transparent;
 
     .offscreen {
         position: absolute;
@@ -984,6 +987,7 @@
                                                             position: absolute;
                                                             top: 0;
                                                             left: 0;
+                                                            border: 1px solid transparent;
                                                         }
                                                     }
                                                 }
@@ -1327,6 +1331,7 @@
                                                 position: absolute;
                                                 top: 2px;
                                                 left: 2px;
+                                                border: 1px solid transparent;
                                             }
                                         }
 
@@ -1336,6 +1341,7 @@
                                             position: absolute;
                                             top: 2px;
                                             left: 0;
+                                            border: 1px solid transparent;
                                         }
                                     }
 
@@ -1928,6 +1934,7 @@
                                         position: absolute;
                                         top: 0;
                                         left: 0;
+                                        border: 1px solid transparent;
                                     }
 
                                     .text {
